--- a/src/assets/style/_vars.scss
+++ b/src/assets/style/_vars.scss
@@ -1,7 +1,7 @@
 *{
   --color-red: #f44336;
   --color-black: #000;
-  --color-black-lite: rgba(1, 1, 1, 0.95);
+  --color-black-lite: rgba(0, 0, 0, 0.8);
   --color-gray: #bebebe;
   --color-white: #fff;
   --color-green: #4CAF50;
@@ -18,4 +18,5 @@
   --background-input: #C4C4C4;
   --background-dark:#2B2B2B;
   --background-liner: linear-gradient(0deg, #1A1A1A 0%, rgba(72, 72, 72, 0) 86.41%);
+  --margin-main: 30px;
 }
