--- a/src/assets/style/_vars.scss
+++ b/src/assets/style/_vars.scss
@@ -14,7 +14,7 @@
   --border: 1px solid #DDDDDD;
   --smal-text-color: #010101;
   --placeholder-color-text: #9b9b9b;
-  --background-gray: #EAEEF0;
+  --background-gray: #E5EAEC;
   --background-input: #C4C4C4;
   --background-dark:#2B2B2B;
   --background-liner: linear-gradient(0deg, #1A1A1A 0%, rgba(72, 72, 72, 0) 86.41%);
