--- a/src/assets/style/modules/_footer.scss
+++ b/src/assets/style/modules/_footer.scss
@@ -3,4 +3,50 @@
   background: var(--background-dark);
   color: var(--color-gray);
   padding: 50px 0;
+  .flex-block{
+    justify-content: space-between;
+  }
+  .card{
+    max-width: 320px;
+    width: 100%;
+  }
+  .logo{
+    font-size: 30px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: var(--color-white);
+    span{
+      color: var(--color-red);
+    }
+  }
+  .title{
+    text-transform: uppercase;
+    margin-bottom: 20px;
+  }
+  .category-block{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .category-link{
+    color: var(--color-white);
+    text-transform: uppercase;
+    font-size: 18px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+    &:last-child{
+      margin-right: 0;
+    }
+    &:hover{
+      color: var(--color-red);
+    }
+  }
+  .subscribe{
+    margin-top: 20px;
+    display: flex;
+    input{
+      background: var(--background-input);
+      border-radius: 2px 0 0 2px;
+      padding-left: 5px;
+    }
+  }
 }
