--- a/src/assets/style/modules/_nav.scss
+++ b/src/assets/style/modules/_nav.scss
@@ -3,6 +3,8 @@
   width: 100%;
   display: flex;
   align-items: center;
+  border-top: var(--border);
+  border-bottom: var(--border);
   .nav{}
   .nav-list{
     display: flex;
