--- a/src/assets/style/_main.scss
+++ b/src/assets/style/_main.scss
@@ -293,6 +293,9 @@ h6{
   &:last-child{
     margin-bottom: 0;
   }
+  .title:nth-child(1){
+    text-transform: uppercase;
+  }
   .title{
     margin-bottom: 20px;
   }
