--- a/src/assets/style/page/_article.scss
+++ b/src/assets/style/page/_article.scss
@@ -15,8 +15,13 @@
       width: 100%;
       height: 420px;
       border-radius: var(--border-radius);
-      object-fit: cover;
       margin-bottom: 20px;
+      overflow: hidden;
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
     p{
       margin-bottom: 20px;
