--- a/src/assets/style/page/_blog.scss
+++ b/src/assets/style/page/_blog.scss
@@ -1,7 +1,10 @@
 .blog{
   padding-bottom: 80px;
   .title{
+    font-size: 30px;
+    font-weight: bold;
     margin-bottom: 30px;
+    text-transform: uppercase;
   }
   .flex-block{
     justify-content: space-between;
