--- a/src/assets/style/page/_home.scss
+++ b/src/assets/style/page/_home.scss
@@ -61,7 +61,16 @@
       border-radius: var(--border-radius);
       margin-bottom: 5px;
       .flex-block{
+        position: relative;
         align-items: center;
+        a{
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          z-index: 9;
+        }
       }
       .img-block{
         position: relative;
@@ -127,7 +136,7 @@
         object-fit: cover;
       }
       .title{}
-      .a{
+      a{
         position: absolute;
         top: 0;
         left: 0;
