--- a/src/assets/style/_main.scss
+++ b/src/assets/style/_main.scss
@@ -280,6 +280,8 @@ h6{
   position: relative;
   padding-bottom: 4px;
   text-transform: uppercase;
+  font-size: 30px;
+  font-weight: bold;
   &::before{
     content: '';
     position: absolute;
@@ -338,14 +340,36 @@ h6{
   }
 }
 .adblock{
+  position: relative;
   border: var(--border);
   border-radius: var(--border-radius);
   object-fit: cover;
   width: 100%;
   height: 310px;
   margin-bottom: 30px;
+  cursor: pointer;
+  overflow: hidden;
   &:last-child{
     margin-bottom: 0;
+  }
+  &::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--background-liner);
+  }
+  .adblock-test{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--color-white);
+    font-size: 25px;
+    font-weight: bold;
+    z-index: 9;
   }
 }
 .breadcrumbs-block{
