--- a/src/assets/style/modules/_header.scss
+++ b/src/assets/style/modules/_header.scss
@@ -51,7 +51,7 @@
       margin-right: 15px;
       img{
         width: 100%;
-        height: auto;
+        height: 100%;
         object-fit: cover;
       }
     }
