--- a/src/assets/style/page/_home.scss
+++ b/src/assets/style/page/_home.scss
@@ -37,15 +37,129 @@
     .date{
       margin-bottom: 20px;
     }
-    .flex-block{
-      display: flex;
-      justify-content: space-between;
-      align-items: stretch;
+    .content-block{
+      position: relative;
+      height: 605px;
     }
-    .col{
+    .row-block{
+      position: relative;
+      &:nth-child(1){
+        position: absolute;
+        top: 0;
+        left: 0;
+        max-width: 350px;
+        width: 100%;
+        height: 605px;
+        border-radius: var(--border-radius);
+        overflow: hidden;
+        &::before{
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: var(--background-liner);
+          width: 100%;
+          height: 100%;
+          z-index: 8;
+        }
+        img{
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+        }
+        a{
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          z-index: 9;
+        }
+        .content{
+          position: absolute;
+          top: auto;
+          left: 20px;
+          right: 20px;
+          bottom: 30px;
+          color: var(--color-white);
+          z-index: 9;
+        }
+        .date{
+          margin-bottom: 20px;
+          font-size: 16px;
+          text-transform: uppercase;
+          &::before{
+            content: '';
+            position: absolute;
+            top: 50%;
+            transform: translate(0, -50%);
+            left: 0;
+            width: 24px;
+            height: 24px;
+            background: url("../img/icon_time-24px.svg");
+          }
+        }
+        .content__title{
+          font-size: 28px;
+          padding-right: 20px;
+          -ms-text-overflow: ellipsis;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          -ms-line-clamp: 3;
+          -webkit-line-clamp: 3;
+          line-clamp: 3;
+          display: -webkit-box;
+          word-wrap: break-word;
+          -webkit-box-orient: vertical;
+          box-orient: vertical;
+        }
+      }
+      position: relative;
+      display: flex;
+      align-items: center;
       max-width: 350px;
       width: 100%;
-      height: 605px;
+      height: 88px;
+      margin-bottom: 15px;
+      margin-left: auto;
+      margin-right: 0;
+      border-radius: var(--border-radius);
+      overflow: hidden;
+      .content__title{
+        font-size: 16px;
+        font-weight: normal;
+      }
+      .date{
+        margin-bottom: 10px;
+        &::before{
+          content: '';
+          position: absolute;
+          top: 50%;
+          transform: translate(0, -50%);
+          left: 0;
+          width: 15px;
+          height: 15px;
+          background: url("../img/icon_time-15px.svg");
+        }
+      }
+      a{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 9;
+      }
+      img{
+        width: 88px;
+        height: 88px;
+        object-fit: cover;
+        border-radius: var(--border-radius);
+        margin-right: 10px;
+      }
     }
   }
 
