--- a/src/assets/style/_main.scss
+++ b/src/assets/style/_main.scss
@@ -388,3 +388,11 @@ h6{
     color: var(--color-gray);
   }
 }
+.the-post-link{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+}
