--- a/src/assets/style/page/_home.scss
+++ b/src/assets/style/page/_home.scss
@@ -8,6 +8,9 @@
     .col-title{
       line-height: 1.24;
     }
+    .col{
+      position: relative;
+    }
   }
 
   .top-news{
@@ -25,6 +28,7 @@
     }
     .btn-filter{
       color: var(--color-black-lite);
+      text-transform: uppercase;
       margin-right: 30px;
       font-size: 18px;
       &:last-child{
