--- a/src/assets/style/page/_home.scss
+++ b/src/assets/style/page/_home.scss
@@ -7,6 +7,7 @@
     }
     .col-title{
       line-height: 1.24;
+      font-size: 28px;
     }
     .col{
       position: relative;
@@ -172,6 +173,7 @@
     width: 100%;
     .title-line{
       margin-bottom: 20px;
+      font-size: 30px;
     }
     .top-block{
       background: var(--background-gray);
@@ -207,6 +209,7 @@
         max-width: 290px;
         .title{
           margin-bottom: 10px;
+          font-size: 18px;
         }
         p{
           line-height: 1.24;
@@ -224,6 +227,10 @@
       border-radius: var(--border-radius);
       .row{
         max-width: 330px;
+      }
+      .title{
+        font-size: 16px;
+        font-weight: 500;
       }
     }
   }
@@ -253,7 +260,10 @@
         border-radius: var(--border-radius);
         object-fit: cover;
       }
-      .title{}
+      .title{
+        font-size: 16px;
+        font-weight: 500;
+      }
       a{
         position: absolute;
         top: 0;
