--- a/src/assets/style/page/_search.scss
+++ b/src/assets/style/page/_search.scss
@@ -36,7 +36,8 @@
   .search-result{
     .row{
       margin-bottom: 35px;
-      height: 400px;
+      height: auto;
+      overflow: hidden;
       .title{
         margin-bottom: 15px;
         font-size: 24px;
@@ -44,7 +45,7 @@
     }
   }
   .result-content{
-    height: 60px;
+    height: 57px;
     overflow: hidden;
   }
   .pagination{}
