--- a/src/assets/style/_main.scss
+++ b/src/assets/style/_main.scss
@@ -408,3 +408,56 @@ h6{
   height: 100%;
   z-index: 99;
 }
+.mobile-navbar{
+  display: none;
+  position: relative;
+  .logo{
+    margin-left: 40px;
+    font-size: 24px;
+    font-weight: bold;
+    color: var(--color-red);
+    span{
+      color: var(--color-white);
+      margin-left: 3px;
+    }
+  }
+}
+.mobile-nav{
+  position: absolute;
+  background-color: #ffffff;
+  top: 0;
+  left: -20px;
+  padding: 50px 30px;
+  width: 100vw;
+  height: 100vh;
+  font-size: 22px;
+  font-weight: bold;
+  z-index: 9999;
+  a{
+    color: var(--color-black);
+  }
+  .close{
+    position: absolute;
+    top: 40px;
+    left: auto;
+    right: 40px;
+    width: 40px;
+    height: 40px;
+    font-size: 38px;
+    cursor: pointer;
+  }
+}
+.mobile-nav__items{
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  .router-link-active{
+    color: var(--color-red);
+  }
+}
+.burger-menu{
+  color: var(--color-white);
+  font-size: 38px;
+  width: 38px;
+  height: 100%;
+  padding:0;
+}
