--- a/src/assets/style/_media.scss
+++ b/src/assets/style/_media.scss
@@ -1,6 +1,7 @@
 @media (max-width: 1200px) {
 }
-
+@media (min-width: 1200px) {
+}
 @media (max-width: 1140px) {
   .latest-news {
     .flex-col {
@@ -52,6 +53,23 @@
 
 
 @media (max-width: 820px) {
+  .header-search .logo{
+    display: none;
+  }
+  .header-search .search{
+    width: 100%;
+    justify-content: center;
+    input{
+      width: 80%;
+      height: 40px;
+    }
+  }
+  .mobile-navbar{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+  }
   .header{
     padding-bottom: 0;
   }
@@ -59,6 +77,7 @@
     display: none;
   }
   .top-header {
+    height: 70px;
     .news-slider, .news-slider__nav, .date{
       display: none;
     }
